<?xml version="1.0" encoding="utf-8"?>


<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="@dimen/_16sdp"
    app:cardElevation="@dimen/_10sdp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/name"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:autofillHints=""
            android:ellipsize="end"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:maxEms="20"
            android:maxLength="20"
            android:minEms="5"
            android:singleLine="true"
            android:textColor="@color/primaryDarkColor"
            android:textSize="@dimen/_16ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_10sdp"
            android:text="@string/sex"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btn_man"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:checked="true"
                android:text="@string/male" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/btn_female"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="@string/female" />

        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:background="@drawable/background_btn_send_otp"
                android:text="@string/ok"
                android:textSize="@dimen/_16ssp" />

            <Button
                android:id="@+id/btn_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_weight="0.5"
                android:background="@drawable/background_btn_send_otp"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textSize="@dimen/_16ssp" />
        </LinearLayout>

    </LinearLayout>


</androidx.cardview.widget.CardView>