<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".activities.SendOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_send" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/otp_send_txt"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:gravity="center"
            android:text="@string/otp_send_txt2"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_35sdp"
            android:layout_marginEnd="@dimen/_30sdp"
            android:gravity="center"
            android:text="@string/enter_mobile_number"
            android:textColor="@color/secondTextColor"
            android:textSize="@dimen/_12ssp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_60sdp"
            android:layout_marginEnd="@dimen/_60sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/_84"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/input_number_phone"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_35sdp"
                android:background="@null"
                android:hint="@string/_0394998716"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="phone"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_2sdp"
            android:layout_marginStart="@dimen/_70sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_70sdp"
            android:background="@color/dividerColor" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_send_phone_number"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_45sdp"
                android:background="@drawable/background_btn_send_otp"
                android:text="@string/txt_confirm"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>
</ScrollView>