<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background_login_image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_for_login_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_supporter"
        android:layout_width="@dimen/_1sdp"
        android:layout_height="@dimen/_1sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/login_trouble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_20sdp"
        android:text="@string/login_trouble"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="@dimen/_12ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/view_supporter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login_by_phone"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_15sdp"
        android:background="@drawable/background_for_btn_login_phone"
        android:text="@string/login_by_phone"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/login_trouble"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_login_by_fb"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:background="@drawable/background_for_btn_login_phone"
        android:text="@string/login_by_fb"
        android:textAllCaps="false"
        android:textSize="@dimen/_14ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_by_phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/detail_tag_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:text="@string/concept_app"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintBottom_toTopOf="@+id/btn_login_by_fb" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_35sdp"
        android:layout_marginEnd="@dimen/_35sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:text="@string/title_login"
        android:textColor="@color/whiteColor"
        android:textSize="@dimen/_26ssp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/detail_tag_line" />

</androidx.constraintlayout.widget.ConstraintLayout>