<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.VerifyOTPActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_100sdp"
            android:layout_marginTop="@dimen/_60sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_received" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_25sdp"
            android:gravity="center"
            android:text="@string/otp_send_txt"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_16ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:gravity="center"
            android:text="@string/otp_received_txt"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:layout_marginEnd="@dimen/_45sdp"
            android:gravity="center"
            android:textColor="@color/primaryTextColor"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/input_code1"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code2"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code3"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code4"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code5"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/input_code6"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_40sdp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_20ssp"
                android:textStyle="bold"
                tools:ignore="LabelFor" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_get_otp"
                android:textColor="@color/secondTextColor"
                android:textSize="@dimen/_12ssp" />

            <TextView
                android:id="@+id/resend_o_t_p"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:text="@string/resend_otp"
                android:textColor="@color/primaryDarkColor"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_verify"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_45sdp"
                android:background="@drawable/background_btn_send_otp"
                android:text="@string/txt_confirm"
                android:textColor="@color/whiteColor"
                android:textSize="@dimen/_14ssp"
                android:textStyle="bold" />

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

    </LinearLayout>

</ScrollView>